# hypr-nav

./: .gitignore  AGENTS.md  Cargo.toml  DOLT_REMOTE.md  README.md  manifest
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: rust.yml
plans/: 001-preserve-tmux-session-names.md  002-return-hypr-dispatch-failures.md  003-pid-aware-kitty-detection.md  004-smart-close-log-privacy.md  005-add-ci-and-agent-guide.md  README.md
src/: close.rs  lib.rs  main.rs  tmux.rs
tests/: integration_harness.rs
